--- a/index.html
+++ b/index.html
@@ -213,6 +213,26 @@
       </div>
     </div>
 
+    <div class="card" data-tab="jquery">
+      <div class="headline">The Benefits of Using JQuery</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/fido.jpg" />
+        </div>
+        <span>By Fox Wernli</span>
+      </div>
+    </div>
+
+    <div class="card" data-tab="bootstrap">
+      <div class="headline">Hacks to Using Bootstrap more Effectively</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/max.jpg" />
+        </div>
+        <span>By Corina Wernli</span>
+      </div>
+    </div>
+
   </div>
 </body>
 
